--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+        <uses-feature android:name="android.hardware.sensor.accelerometer"
+                      android:required="true" />
         <activity android:name="Main"
                   android:label="@string/app_name">
             <intent-filter>
