--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.slightlyrobot.app"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/slightlyrobot_logo">
         <uses-feature android:name="android.hardware.sensor.accelerometer"
                       android:required="true" />
         <activity android:name="Main"
