--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <uses-feature android:name="android.hardware.sensor.accelerometer"
                       android:required="true" />
         <activity android:name="Main"
+                  android:screenOrientation="portrait"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
